--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -88,6 +88,7 @@ exceptions.browserexception.rangeerror = Parça yükleme hatası
 exceptions.browserexception.redirecterror = beklenmedik parça kopyalama hatası: tekrar yönlendir
 gui.accountcheck.pluginerror = %s Takmabirimi hatalı olabilir. Yardım ve Desteğe bildiriniz!
 gui.askname = Adınız?
+gui.btn_abort = Vazgeç
 gui.btn_add = Ekle
 gui.btn_cancel = İptal
 gui.btn_cancelcountdown = Geri sayımı durdur
@@ -194,6 +195,7 @@ gui.config.gui.custom_browser = Tarayıcının bulunduğu yol
 gui.config.gui.custom_browser_param = Parametre %url (her satır için tek parametre)
 gui.config.gui.disabledialogs = Onaylama dialogları devre dışı
 gui.config.gui.disabletooltipps = İndirme listesinde araç ipucu etkisiz 
+gui.config.gui.doubeclick = Paktleri açıp/kapatmak için çift tıkla
 gui.config.gui.ext = Gelişmiş
 gui.config.gui.extended = Gelişmiş
 gui.config.gui.language = Dil Seçenekleri
@@ -202,6 +204,8 @@ gui.config.gui.linkgrabber.onlinecheck = Link Yakalayıcı: Link durumu (Mevcut)
 gui.config.gui.look.tab = Bak & Hisset
 gui.config.gui.plaf = Sitil (uygulanması için yeniden başlat)
 gui.config.gui.premiumconfigfilednum = Kaç tane Premium hesap alanı gösterilsin
+gui.config.gui.reg_protocols = jdownloader'a ccf/dlc/rsdf linkle
+gui.config.gui.show_speed_graph = Hız metre grafiğini göster
 gui.config.gui.showsplash = Program başlangıcında açılış ekranı göster
 gui.config.gui.soundtheme = Ses Teması
 gui.config.gui.testbrowser = Tarayıcı Testi
@@ -359,6 +363,7 @@ gui.downloadlist.tooltip.partsfailed = Başarısız:
 gui.downloadlist.tooltip.partsfinished = Biten:
 gui.downloadlist.tooltip.simultan_downloads = Aynı anda Mak. indirme sayısı:
 gui.droptarget.downloadsadded = İndirmeler eklendi:
+gui.droptarget.grabbed = Yakalandı:
 gui.droptarget.label = Linklerini buraya bırak!
 gui.droptarget.title = Link Toplayıcı (linklerini buraya sürükle)
 gui.fengshuiconfig.general.tooltip = <html>Tercih ettiğiniz dili ve indirme klasörünüzü <br> burdan belirleyebilirsiniz.
@@ -436,6 +441,7 @@ gui.linkinfo.file = Dosya
 gui.linkinfo.filesize = Dosya Boyutu
 gui.linkinfo.package = Paket
 gui.linkinfo.password = Parola
+gui.linkinfo.pwdl = İndirme için parola
 gui.linkinfo.rate = Yenileme Hızı
 gui.linkinfo.saveto = Buraya Kaydet
 gui.linkinfo.speed = Hız
@@ -443,6 +449,7 @@ gui.linkinfo.title = Link Detayları:
 gui.linkinfo.waittime = Bekleme süresi
 gui.linklist.editpackagename.message = Yeni paket adı
 gui.linklist.newpackage.message = Yeni paket adı:
+gui.linklist.setpw.message = İndirme parolasını belirleyin
 gui.linklist.status.doresume = Sürdürme için bekleniyor
 gui.logdialog.btn_uploadlog = Günlüğü Karşıya Yükle
 gui.logdialog.loglink = Günlük-Linki (açmak için tıklayın)
@@ -491,7 +498,7 @@ gui.menu.action.edit.items_down.accel = ALT+DOWN
 gui.menu.action.edit.items_down.desc = Seçili girdileri bir alt satıra taşı
 gui.menu.action.edit.items_down.mnem = U
 gui.menu.action.edit.items_down.name = Aşağıya taşı
-gui.menu.action.edit.items_remove.accel = Sil
+gui.menu.action.edit.items_remove.accel = SİL
 gui.menu.action.edit.items_remove.desc = Seçili girdileri listeden kaldır
 gui.menu.action.edit.items_remove.mnem = D
 gui.menu.action.edit.items_remove.name = Girdileri kaldır
@@ -598,6 +605,7 @@ gui.packageinfo.packagesize = Paket boyutu
 gui.packageinfo.password = Parola
 gui.packageinfo.rate = Yenileme Hızı
 gui.packageinfo.title = Paket Detayları:
+gui.plugins.decrypt.askclicknload = Deşifreleyici %s eski tarihli fakat Tıkla ve Yükle'yi destekliyor. Websitesi şimdi açılsın mı?
 gui.reconnect.confirm = Tekrar bağlanmak istediğinize emin misiniz?
 gui.reconnect.failed = Tekrar Bağlan Başarısız
 gui.reconnect.success = Tekrar Bağlan Başarılı !
@@ -637,6 +645,7 @@ gui.table.contextmenu.packagesubmenu = Paket
 gui.table.contextmenu.priority = Öncelik
 gui.table.contextmenu.reset = Sıfırla
 gui.table.contextmenu.resume = Sürdür
+gui.table.contextmenu.setdlpw = Dosya parolasını belirle
 gui.table.draganddrop.after = Altına Yerleştir '%s'
 gui.table.draganddrop.before = Üstüne Yerleştir '%s'
 gui.table.draganddrop.insertinpackageend = Paketin Sonuna Yerleştir '%s'
@@ -825,8 +834,10 @@ modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = Harici
 modules.reconnect.types.liveheader = LiveHeader/Curl
 modules.unrar.enabled.instanthelp = http://ns2.km32221.keymachine.de/jdownloader/web/page.php?id=17
+plugin.optional.jdchat.getlog = %s adlı geliştirenin problemi çözmesi için günlüğe ihtiyacı var. Ona günlüğünüzü göndermeyi kabul ediyormunuz?
 plugin.optional.jdchat.teamviewer.yourtvdata = Teamviewer verileriniz::
 plugin.rapidshare.error.accountnotfound = Premium hesabınız bulunamadı.
+plugin.rapidshare.error.filetolarge = Bu dosya 200 MB'den daha büyük ve indirebilmeniz için premium-hesaba ihtiyacınız var.
 plugin.rapidshare.error.fraud = Sahtekarlık saptandı: Bu hesap başkaları tarafından yasal olmadan kullanılmış.
 plugin.rapidshare.error.limitexeeded = İndirme limitinizi aştınız.
 plugin.rapidshare.tickettime = Bilet için %s bekle
@@ -836,6 +847,7 @@ plugin.system.notloaded = boşta
 plugins.config.premium.accountnum = <html><b>Premium Hesap #%s</b></html>
 plugins.config.premium.chartapi.caption.error = %s Yükleniyor yada mevcut değil
 plugins.config.premium.chartapi.maxtraffic = Kullanılabilir Mak.Kota
+plugins.config.premium.globaldeactiv = Global devre dışı
 plugins.config.premium.password = Parola
 plugins.config.premium.test = Durum kontrolü
 plugins.config.premium.user = Premium Kullanıcı
@@ -848,10 +860,12 @@ plugins.container.exit.error = Konteyner hatası: %s
 plugins.container.found = İşlem %s link
 plugins.container.open = Konteyner açılıyor
 plugins.decrypt.brazil-series.com1 = İndirme-formatı: Sadece Altyazısız AVI
+plugins.decrypt.charts4you.captcha = Lütfen içinde boşluk olan yuvarlağa tıklayın
 plugins.decrypt.cryptitcom.password = Klasör parola korumalı.Parolayı Girin:
 plugins.decrypt.general.captchacodewrong = Captcha Kodu hatalı
 plugins.decrypt.general.hosterselection = Barındırıcı
 plugins.decrypt.gwarezcc.preferdlc = DLC Konteyner tercih et
+plugins.decrypt.jamendo = Her albüm için alt-klasör yarat
 plugins.decrypt.linkbankeu = Ayna linkleri kontrol et
 plugins.decrypt.myspacecom0 = Tüm indirmeleri "myspace.com/" a yükle
 plugins.decrypt.myspacecom1 = Her artist için alt-klasör yarat
@@ -860,6 +874,9 @@ plugins.decrypt.rslayer.captchaexpired = Güvenlik kodu süresi doldu
 plugins.decrypt.serienjunkies.automaticmirrormanagment = Otomatik ayna link yönetimi
 plugins.decrypt.serienjunkies.mirrormanagement = Aynalink Yönetimi
 plugins.decrypt.serienjunkies.nomirrormanagment = Aynalink Yönetimi yok
+plugins.decrypt.serienjunkies.progress.checklinks = Linkleri kontrol et
+plugins.decrypt.serienjunkies.progress.checkmirror = Ayna linki (alternatifi) kontrol et
+plugins.decrypt.serienjunkies.progress.getlinks = Linkleri al
 plugins.decrypt.serienjunkies.usepremiumlinks = Eğer mümkün ise premium linkleri kullan
 plugins.decrypt.speedysharecom.password = Parola Gir:
 plugins.decrypt.stealthto.captcha = Lütfen boşluktaki daireye tıklayın
@@ -883,6 +900,11 @@ plugins.host.gigasize.freeaccount.pass = Parola
 plugins.host.gigasize.freeaccount.use = Bedava hesap kullan
 plugins.host.gigasize.freeaccount.user = Eposta
 plugins.host.httpallgemein.disable = Takmabirimi devredışı bırak
+plugins.host.megaupload.captchamode.title = Catcha Modu:
+plugins.host.megaupload.captchamode_auto = Otomatik
+plugins.host.megaupload.captchamode_no_captcha = Captchaları Dikkate alma
+plugins.host.megaupload.captchamode_no_reconnect = Tekrar bağlanı Dikkate alma
+plugins.host.megaupload.ports = Bu Portu kullan:
 plugins.host.meinupload.serverdefect = Servis mevcut değil
 plugins.host.premium.info.cash = Para
 plugins.host.premium.info.error = %s takmabirimi , hesap bilgileri özelliğini şimdilik desteklemiyor.
@@ -904,6 +926,8 @@ plugins.host.rapidshare.errors.a16604cac6ed412855855173ba739bfc = Dosya bulunama
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Bu dosyada yasal olmayan içerik var gibi ve kitlenmiş.Bu dosyayı indirmek Rapidshare tarafından yasaklanmıştır.
 plugins.host.rapidshare.errors.cd6152e1a7a4fb8ba7a6dde3b792d937 = Servis kuralları ihlali nedeni ile dosya bu sunucudan kaldırlmıştır.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB limitine ulaşıldı.
+plugins.host.rapidshare.speedtest = Hız Testi
+plugins.host.rapidshare.speedtest.link = Bir Rapidshare.com linki girin
 plugins.host.server.unavailable = Sunucu hatası
 plugins.host.sharebaseto.servererror = Hizmet kullanılamıyor. .sunucuda hata olabilir
 plugins.host.xup = Parola hatalı
@@ -920,6 +944,8 @@ plugins.hoster.rapidshare.com.prefferedserver.random = Rasgele
 plugins.hoster.rapidshare.com.preselection = Rapidshare devralsın
 plugins.hoster.rapidshare.com.telekom = Mümkünse Telekom* sunucusunu kullan 
 plugins.hoster.uploadedto.chunks = Premium bağlantılar # (>1 yoğun trafiğe sebep oluyor)
+plugins.hoster.uploaderpl.accountexpired = Hesap tarihi geçmiş
+plugins.hoster.uploaderpl.freememberacc = Bedava kullanıcı hesabı
 plugins.menu.accounts = Hesaplar
 plugins.menu.configs = Ayarlar
 plugins.menu.enable_premium = Hesabı Etkinleştir
@@ -1120,6 +1146,7 @@ plugins.optional.premiumcollector.fetchaccounts = Hesapları Bul
 plugins.optional.premiumcollector.inserted = %s Hesap başarıyla yerleştirildi!
 plugins.optional.premiumcollector.name = Premium Toplayıcı
 plugins.optional.premiumcollector.onlyvalid = Sadece geçerli ve günü geçmemiş hesapları kabul et
+plugins.optional.premiumcollector.onlyvalid2 = Geçersiz ve Tarihi geçmiş üyelikleri kaldır
 plugins.optional.premiumcollector.overwrite = Hesapların üzerine otomatik yazdır
 plugins.optional.premiumcollector.password = Parola
 plugins.optional.premiumcollector.username = Kullanıcı adı
@@ -1196,6 +1223,10 @@ plugins.trayicon.popup.menu.toggleclipboard = Pano Açık/Kapalı
 plugins.trayicon.popup.menu.togglereconnect = Tekrar Bağlan Açık/Kapalı
 plugins.trayicon.popup.menu.update = JD Güncelleme
 plugins.trayicon.popup.title = JDownloader
+reconnect.progress.1_retries = Tekrar Bağlan #
+reconnect.progress.2_oldıp = Tekrar Bağlan ESKİ IP:
+reconnect.progress.3_ipcheck = Tekrar bağlan YENİ IP: %s / %s
+reconnect.waitforıp = Yeni IP için bekle [san]
 routerinfocollector.dialog.msg = Otomatik <b> router algılamayı geliştirmek için router bilgileri topluyoruz </ b> <br> Sunucumuza yükleme yapmak isterseniz TAMAMA tıklayın!
 routerinfocollector.dialog.title = Otomatik Router algılamayı geliştirmek için bize destek olun
 showcaptcha.choose.file = imge dosyası seç
@@ -1244,3 +1275,11 @@ train.choose.folder = Klasör seç
 train.chooser.title = jDownloader : Tümünü eğit
 train.method = Yöntem belirle:
 wrapper.webupdate.updatefile = %s takmabirimini güncelle
+gui.menu.action.optconfig.name = Eklenti yapılandırma
+gui.menu.action.hostconfig.name = Barındırıcı yapılandırma
+gui.menu.action.hostconfig.desc = Barındırıcı yapılandırmayı açar
+gui.menu.action.optconfig.desc = Eklenti yapılandırmayı açar
+gui.menu.action.backup.desc = Link listesini yedekler
+gui.menu.action.backup.name = İndirmeleri Yedekle
+gui.menu.action.backup.mnem =B
+gui.menu.action.backup.accel =CTRL+B
