--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -177,6 +177,7 @@ gui.config.fengshui.settings = Ayarlar
 gui.config.fengshui.title = Feng Shui Ayarları
 gui.config.general.changelog.auto = Güncellemeden sonra değişiklikleri göster
 gui.config.general.createsubfolders = İndirilen paket için adını içeren Alt-klasör yarat
+gui.config.general.createsubfoldersbefore = Linkleri ekledikten sonra alt-klasör yarat
 gui.config.general.downloaddirectory = İndirme klasorü
 gui.config.general.filelogger = Günlüğü burda oluştur ./logs/ directory
 gui.config.general.loggerlevel = Oturum seviyesi
@@ -466,6 +467,10 @@ gui.menu.action.add.accel = CTRL+V
 gui.menu.action.add.desc = Bir yada daha çok indirme linki ekler
 gui.menu.action.add.mnem = H
 gui.menu.action.add.name = Link ekle
+gui.menu.action.backup.accel = CTRL+B
+gui.menu.action.backup.desc = Link listesini yedekler
+gui.menu.action.backup.mnem = B
+gui.menu.action.backup.name = İndirmeleri Yedekle
 gui.menu.action.ces.accel =  
 gui.menu.action.ces.desc = Captcha takas servsini kullan
 gui.menu.action.ces.mnem = C
@@ -518,6 +523,8 @@ gui.menu.action.help.accel = CTRL+9
 gui.menu.action.help.desc = Yardım ve Destek
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Destek
+gui.menu.action.hostconfig.desc = Barındırıcı yapılandırmayı açar
+gui.menu.action.hostconfig.name = Barındırıcı yapılandırma
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Eklenti Yükle(*.jdu)
 gui.menu.action.install.filefilter = JD eklentileri
@@ -531,6 +538,8 @@ gui.menu.action.move_down.desc = Seçili girdileri bir alt satıra taşı
 gui.menu.action.move_down.name = Aşağıya taşı
 gui.menu.action.move_up.desc = Seçili Girdilieri bir üst satıra taşı
 gui.menu.action.move_up.name = Yukarı taşı
+gui.menu.action.optconfig.desc = Eklenti yapılandırmayı açar
+gui.menu.action.optconfig.name = Eklenti yapılandırma
 gui.menu.action.passwordlist.accel = F3
 gui.menu.action.passwordlist.desc = Parola listenizi burdan düzenleyin
 gui.menu.action.passwordlist.mnem = b
@@ -840,6 +849,7 @@ plugin.rapidshare.error.accountnotfound = Premium hesabınız bulunamadı.
 plugin.rapidshare.error.filetolarge = Bu dosya 200 MB'den daha büyük ve indirebilmeniz için premium-hesaba ihtiyacınız var.
 plugin.rapidshare.error.fraud = Sahtekarlık saptandı: Bu hesap başkaları tarafından yasal olmadan kullanılmış.
 plugin.rapidshare.error.limitexeeded = İndirme limitinizi aştınız.
+plugin.rapidshare.error.serverunavailable = %s adlı sunucu şu anda mevcut DEĞİL
 plugin.rapidshare.tickettime = Bilet için %s bekle
 plugin.serienjunkies.archiveincomplete = Arşiv tam değil
 plugin.serienjunkies.pageerror = SJ indirme linklerini sağlamıyor
@@ -934,6 +944,7 @@ plugins.host.xup = Parola hatalı
 plugins.hoster.error.agb = TOS imzalanmadı
 plugins.hoster.fastload.bypassapi = API Atlatma
 plugins.hoster.general.passwordprotectedınput = Linkler parola korumalı. Lütfen parolayı girin:
+plugins.hoster.letitbitnet.errors.countryblock = Letbitbit ülkenize bu dosyayı yasaklamış
 plugins.hoster.passquestion = Link '%s' parola korumalı. Parolayı Girin:
 plugins.hoster.premium.status_ok = Hesap durumu iyi
 plugins.hoster.premiumtab = Premium Ayarları
@@ -1223,10 +1234,13 @@ plugins.trayicon.popup.menu.toggleclipboard = Pano Açık/Kapalı
 plugins.trayicon.popup.menu.togglereconnect = Tekrar Bağlan Açık/Kapalı
 plugins.trayicon.popup.menu.update = JD Güncelleme
 plugins.trayicon.popup.title = JDownloader
+reconnect.ipfiltered.warning.short = Bu ip %s yasaklı olarak belirlendi
 reconnect.progress.1_retries = Tekrar Bağlan #
 reconnect.progress.2_oldıp = Tekrar Bağlan ESKİ IP:
 reconnect.progress.3_ipcheck = Tekrar bağlan YENİ IP: %s / %s
-reconnect.waitforıp = Yeni IP için bekle [san]
+reconnect.retries = Mak. Deneme sayısı [-1 = limitsiz]
+reconnect.waitforıp = Yeni IP kontrol aralığı sonlandırma süresi [zamanlayıcı] [san]
+reconnect.waittimetofirstıpcheck = Yeni IP kontrol aralığı (her X saniyede bir)
 routerinfocollector.dialog.msg = Otomatik <b> router algılamayı geliştirmek için router bilgileri topluyoruz </ b> <br> Sunucumuza yükleme yapmak isterseniz TAMAMA tıklayın!
 routerinfocollector.dialog.title = Otomatik Router algılamayı geliştirmek için bize destek olun
 showcaptcha.choose.file = imge dosyası seç
@@ -1275,11 +1289,3 @@ train.choose.folder = Klasör seç
 train.chooser.title = jDownloader : Tümünü eğit
 train.method = Yöntem belirle:
 wrapper.webupdate.updatefile = %s takmabirimini güncelle
-gui.menu.action.optconfig.name = Eklenti yapılandırma
-gui.menu.action.hostconfig.name = Barındırıcı yapılandırma
-gui.menu.action.hostconfig.desc = Barındırıcı yapılandırmayı açar
-gui.menu.action.optconfig.desc = Eklenti yapılandırmayı açar
-gui.menu.action.backup.desc = Link listesini yedekler
-gui.menu.action.backup.name = İndirmeleri Yedekle
-gui.menu.action.backup.mnem =B
-gui.menu.action.backup.accel =CTRL+B
