--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -352,6 +352,38 @@ gui.fengshuiconfig.routerpassword = Hasło
 gui.fengshuiconfig.testsettings = Test ustawień
 gui.fengshuiconfig.username = Nazwa użytkownika
 gui.fengshuiconfig.wikiurl = http://www.jdownloader.org/pl/knowledge/wiki/gui/configuration/feng-shui-config
+gui.filechooser.acceptallfilefiltertext = Wszystkie pliki
+gui.filechooser.cancelbuttontext = Anuluj
+gui.filechooser.cancelbuttontooltiptext = Anuluj
+gui.filechooser.deletebuttontext = Usuń
+gui.filechooser.deletebuttontooltiptext = Usuń
+gui.filechooser.detailsviewbuttontooltiptext = Szczegóły
+gui.filechooser.filenamelabeltext = Nazwa pliku:
+gui.filechooser.filesoftypelabeltext = Pliki typu:
+gui.filechooser.helpbuttontext = Pomoc
+gui.filechooser.helpbuttontooltiptext = Pomoc
+gui.filechooser.homefoldertooltiptext = Folder domowy
+gui.filechooser.listviewbuttontooltiptext = Lista
+gui.filechooser.loaddlc = Dodaj listę plików z pliku pojemnika
+gui.filechooser.lookinlabeltext = Szukaj w:
+gui.filechooser.newfoldertooltiptext = Utwórz nowy folder
+gui.filechooser.openbuttontext = Otwórz
+gui.filechooser.openbuttontooltiptext = Otwórz
+gui.filechooser.openwindowtitletext = Otwórz
+gui.filechooser.other.newfolder.subsequent = Nowy folder {0}
+gui.filechooser.other.newfoldert = Nowy folder
+gui.filechooser.pathlabeltext = Ścieżka
+gui.filechooser.refreshmenutext = Odśwież
+gui.filechooser.savebuttontext = Zapisz
+gui.filechooser.savebuttontooltiptext = Zapisz
+gui.filechooser.saveinlabeltext = Zapisz w:
+gui.filechooser.savelistasdlc = Zapisz listę do pliku pojmenika
+gui.filechooser.savewindowtitletext = Zapisz
+gui.filechooser.updatebuttontext = Aktualizuj
+gui.filechooser.updatebuttontooltiptext = Aktualizuj
+gui.filechooser.upfoldertooltiptext = W górę
+gui.filechooser.win32.newfolder = Nowy folder
+gui.filechooser.win32.newfolder.subsequent = Nowy folder {0}
 gui.javacheck.html = <div style='width:534px;height;200px'><h2>Używasz niewłaściwej wersji Javy. Najlepiej używać najnowszej wersji Javy firmy Sun. Czy mimo to chcesz spróbować uruchomić JDownloadera?<table width='100%%'><tr><th colspan='2'>Twoja wersja Javy:</th></tr><tr><th>Nazwa wykonawcza</th><td>%s</td></tr><tr><th>Wersja uruchomieniowa</th><td>%s</td></tr></table></div>
 gui.javacheck.title = Niewłaściwa wersja Javy
 gui.linkgrabber.bar.title = Zbieracz informacji
@@ -562,6 +594,8 @@ gui.menu.plugins.help = Pomoc
 gui.menu.plugins.phost = Konta Premium
 gui.menu.remove = Usuń
 gui.messages.outofmemoryerror = Wystąpił błąd!\r\nJDownloaderowi brakuje pamięci. Zalecane jest ponowne uruchomienie komputera.\r\nProsimy o zgłoszenie tego błędu!
+gui.messagewindow.backupcreated = Kopia zapasowa listy linków została utworzona poprawnie.
+gui.messagewindow.information = Informacja
 gui.packageinfo.comment = Komentarz
 gui.packageinfo.dldirectory = Folder pobierania
 gui.packageinfo.extractafter = Automatyczne wypakowywanie
@@ -801,6 +835,8 @@ plugin.rapidshare.error.limitexeeded = Limit pobierania osiągnięty.
 plugin.rapidshare.error.serverunavailable = Serwer %s jest chwilowo niedostępny.
 plugin.rapidshare.tickettime = Oczekiwanie %s min. na bilet
 plugin.serienjunkies.archiveincomplete = Archiwum niekompletne
+plugin.serienjunkies.manager.dllinks = Usuwanie niechcianych linków
+plugin.serienjunkies.manager.title = Zarządzanie linkami SerienJunkies
 plugin.serienjunkies.pageerror = SJ nie wspiera linków pobierania
 plugin.system.notloaded = niezaładowany
 plugins.config.premium.accountnum = <html><b>Konto Premium #%s</b></html>
@@ -821,6 +857,8 @@ plugins.decrypt.cryptitcom.password = Folder chroniony hasłem. Podaj hasło:
 plugins.decrypt.general.captchacodewrong = Niepoprawny kod Captcha
 plugins.decrypt.general.hosterselection = Wybór hosta
 plugins.decrypt.gwarezcc.preferdlc = Najlepiej Pojemnik DLC
+plugins.decrypt.jamendo = Twórz podkatalog dla każdego albumu
+plugins.decrypt.jamendoalbum = Najlepiej cały album jako ZIP
 plugins.decrypt.linkbankeu = Sprawdź linki mirrorów
 plugins.decrypt.myspacecom0 = Wczytaj wszystkie elementy w \"myspace.com/\"
 plugins.decrypt.myspacecom1 = Dla każdego artysty utwórz osobny folder
@@ -828,6 +866,12 @@ plugins.decrypt.rslayer.captchaexpired = Kod bezpieczeństwa wygasł
 plugins.decrypt.serienjunkies.automaticmirrormanagment = automatyczne zarządzanie mirrorami
 plugins.decrypt.serienjunkies.mirrormanagement = zarządzanie mirrorami
 plugins.decrypt.serienjunkies.nomirrormanagment = brak zarządznia mirrorami
+plugins.decrypt.serienjunkies.progress.captcha = Błąd kodu Captcha
+plugins.decrypt.serienjunkies.progress.checklinks = sprawdź linki
+plugins.decrypt.serienjunkies.progress.checkmirror = sprawdź mirror
+plugins.decrypt.serienjunkies.progress.decryptlimit = Limit pobierania został osiągnięty. Zaczekaj na ponowne połączenie (maks. 2 min.)
+plugins.decrypt.serienjunkies.progress.downloadlimit = Błąd: Limit pobierania SerienJunkies
+plugins.decrypt.serienjunkies.progress.getlinks = pobierz linki
 plugins.decrypt.serienjunkies.usepremiumlinks = używaj linków premium jeśli to możliwe
 plugins.decrypt.speedysharecom.password = Wprowadź hasło:
 plugins.decrypt.stealthto.captcha = Kliknij na kółko ze szczeliną
@@ -876,6 +920,7 @@ plugins.host.sharebaseto.servererror = Usługa niedostępna
 plugins.host.xup = Błędne hasło
 plugins.hoster.error.agb = Regulamin użytkowania nie zaakceptowany
 plugins.hoster.general.passwordprotectedinput = Linki są zabezpieczone hasłem. Proszę wprowadzić hasło:
+plugins.hoster.jamendo = Pobieraj w wysokiej jakości, jeśli to możliwe
 plugins.hoster.letitbitnet.errors.countryblock = Letitbit nie pozwala na pobieranie tego pliku w twoim kraju.
 plugins.hoster.passquestion = Linki '%s' jest zabezpieczony hasłem. Proszę wprowadzić hasło:
 plugins.hoster.premium.status_ok = Konto prawidłowe.
