--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -669,7 +669,10 @@ gui.treetable.header_2.files = Pliki
 gui.treetable.header_3.hoster = Hosting
 gui.treetable.header_4.status = Stan
 gui.treetable.header_5.progress = Postęp
+gui.treetable.horizontalscroll = Przewijanie w poziomie
 gui.treetable.packagestatus.links_active = aktywny
+gui.treetable.packall = Dopasuj wszystkie kolumny
+gui.treetable.packselected = Dopasuj wybraną kolumnę
 gui.treetable.part.label = Plik
 gui.treetable.part.label_update = Aktualizacja
 gui.treetable.parts = Części
